force-app/main/default/objects/Requirement__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Document Type</label>
    <referenceTo>Document_Type__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>