force-app/main/default/objects/Requirement__c/fields/Max_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Age_Days__c</fullName>
    <label>Max Age (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>